--- a/package.json
+++ b/package.json
@@ -12,16 +12,48 @@
   "dependencies": {
     "expo": "^35.0.0",
     "react": "16.8.3",
+    "react-redux": "^7.0.1",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-web": "^0.11.7",
     "prisma-client-lib": "^1.34.10",
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "axios": "^0.19.0",
+    "compression": "^1.7.3",
+    "connect-session-sequelize": "^6.0.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.1",
+    "history": "^4.9.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
+    "prop-types": "^15.7.2",
+    "sequelize": "^5.3.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0",
     "nodemon": "^1.18.3",
-    "yaml": "^1.6.0"
+    "yaml": "^1.6.0",
+    "eslint": "^5.16.0",
+    "eslint-config-fullstack": "^6.0.0",
+    "eslint-plugin-react": "^7.12.4",
+    "git-url-parse": "^11.1.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "mocha": "^6.1.4",
+    "npm-merge-driver": "^2.3.5",
+    "prettier": "1.11.1",
+    "react-test-renderer": "^16.4.2",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3",
+    "simple-git": "^1.121.0",
+    "supertest": "^4.0.2"
   },
   "private": true
 }
