--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
+    "start-dev": "NODE_ENV='development' & npm run start-server",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -15,19 +17,31 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "compression": "^1.7.4",
+    "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-web-browser": "^7.0.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "express-session": "^1.17.0",
+    "graphql": "^14.5.8",
+    "morgan": "^1.9.1",
     "native-base": "^2.13.8",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "sequelize": "^5.21.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
