--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
+    "faker": "^4.1.0",
     "jest-expo": "^35.0.0"
   },
   "private": true
