--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "expo start",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
-    "start-dev": "NODE_ENV='development' & npm run start-server",
+    "start-dev": "NODE_ENV='development' & npm run start-server & sudo npm start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -14,10 +14,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
+    "axios": "^0.18.0",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
@@ -34,20 +34,21 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
+    "pg": "^7.14.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
-    "redux": "^4.0.4",
+    "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "tcomb-form-native": "^0.6.20",
-    "react-navigation-stack": "^1.10.3",
     "sequelize": "^5.21.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "tcomb-form-native": "^0.6.20"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0",
