--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "graphql": "^14.5.8",
     "morgan": "^1.9.1",
     "native-base": "^2.13.8",
+    "ngrok": "^3.2.5",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
+    "pg": "^7.14.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
