--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "expo start",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
-    "start-dev": "NODE_ENV='development' & npm run start-server & sudo npm start",
+    "start-dev": "NODE_ENV='development' & npm run start-server ",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -45,6 +45,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.2",
