--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "morgan": "^1.9.1",
     "native-base": "^2.13.8",
     "ngrok": "^3.2.5",
@@ -40,6 +41,7 @@
     "path": "^0.12.7",
     "pg": "^7.14.0",
     "react": "16.8.3",
+    "react-apollo": "^3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
