--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
-    "@react-navigation/web": "^1.0.0-alpha.9",  
+    "@react-navigation/web": "^1.0.0-alpha.9",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "compression": "^1.7.4",
@@ -31,6 +31,7 @@
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "morgan": "^1.9.1",
     "native-base": "^2.13.8",
     "ngrok": "^3.2.5",
@@ -39,6 +40,7 @@
     "path": "^0.12.7",
     "pg": "^7.14.0",
     "react": "16.8.3",
+    "react-apollo": "^3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
