--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
-    "seed": "node server/db/seed.js"
+    "seed": "node server/db/seed.js",
+    "debug": "open ‘rndebugger://set-debugger-loc?host=localhost&port=19001’ && npm start"
   },
   "jest": {
     "preset": "jest-expo"
