--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest-expo": "^35.0.0",
     "pg": "^7.14.0",
     "pkg": "^4.4.0",
+    "react-native-maps": "^0.26.1",
     "sequelize": "^5.21.2"
   },
   "private": true
