--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16",
     "sequelize": "^5.21.2",
     "socket.io": "^2.3.0",
     "tcomb-form-native": "^0.6.20",
