--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@apollo/react-hooks": "^3.1.3",
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
+    "@react-native-community/async-storage": "github:react-native-community/async-storage",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@turf/distance": "^6.0.1",
     "@turf/turf": "^5.1.6",
+    "AsyncStorage": "^0.1.5",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "compression": "^1.7.4",
