--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.17.0",
     "geo-distance": "^0.2.0",
     "graphql": "^14.5.8",
+    "graphql-scalars": "^1.0.4",
     "graphql-tag": "^2.10.1",
     "localtunnel": "^2.0.0",
     "lodash.round": "^4.0.4",
@@ -53,6 +54,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.26.1",
+    "react-native-modal": "^11.5.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-stack": "^1.10.3",
