--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,6 +1,6 @@
 # printWidth: 80 # 80
-tabWidth: 2 # 2
-useTabs: false # false
+tabWidth: 1 # 2
+useTabs: true # false
 semi: false # true
 singleQuote: true # false
 trailingComma: none # none | es5 | all
