--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "geo-distance": "^0.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "http": "0.0.0",
     "localtunnel": "^2.0.0",
     "lodash.round": "^4.0.4",
     "morgan": "^1.9.1",
@@ -52,6 +53,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-maps": "^0.26.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
@@ -63,6 +65,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.2",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "tcomb-form-native": "^0.6.20",
     "turf-point": "^2.0.1"
   },
