--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,6 +1,6 @@
 # printWidth: 80 # 80
 tabWidth: 1 # 2
-useTabs: true # false
+useTabs: false # false
 semi: false # true
 singleQuote: true # false
 trailingComma: none # none | es5 | all
