--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "faker": "^4.1.0",
     "jest-expo": "^35.0.0",
     "pg": "^7.14.0",
-    "pkg": "^4.4.0",
-    "sequelize": "^5.21.2"
+    "pkg": "^4.4.0"
   },
   "private": true
 }
