--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-maps": "^0.26.1",
@@ -65,7 +66,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.2",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
     "turf-point": "^2.0.1"
   },
