--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
+    "@react-native-community/art": "^1.0.3",
     "@react-native-community/async-storage": "github:react-native-community/async-storage",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "@turf/distance": "^6.0.1",
@@ -56,11 +57,14 @@
     "react-apollo": "^3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-circular-progress": "^0.2.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
+    "react-native-progress": "^4.0.2",
+    "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-stack": "^1.10.3",
