--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-0",
+    "react-native-google-autocomplete": "^0.1.7",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
     "react-native-progress": "^4.0.2",
