--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-stack": "^1.10.3",
