--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
+    "expo-av": "~7.0.1",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
+    "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -61,6 +63,7 @@
     "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
+    "react-native-s3-upload": "0.0.12",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-stack": "^1.10.3",
