--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
+    "@octokit/graphql-schema": "^6.57.0",
     "@react-native-community/art": "^1.0.3",
     "@react-native-community/async-storage": "github:react-native-community/async-storage",
     "@react-navigation/web": "^1.0.0-alpha.9",
@@ -27,7 +28,6 @@
     "@turf/turf": "^5.1.6",
     "AsyncStorage": "^0.1.5",
     "apollo-boost": "^0.4.4",
-    "axios": "^0.19.0",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
@@ -63,9 +63,9 @@
     "react-native-google-autocomplete": "^0.1.7",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.0.2",
     "react-native-svg": "9.9.5",
-    "react-native-popup-dialog": "^0.18.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
     "react-navigation-stack": "^1.10.3",
