--- a/package.json
+++ b/package.json
@@ -65,9 +65,10 @@
     "react-native-google-autocomplete": "^0.1.7",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
-    "react-native-s3-upload": "0.0.12",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.0.2",
+    "react-native-s3-upload": "0.0.12",
     "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
