--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@expo/samples": "~3.0.3",
-    "@expo/vector-icons": "^10.0.3",
+    "@expo/vector-icons": "^10.0.0",
     "@octokit/graphql-schema": "^6.57.0",
     "@react-native-community/art": "^1.0.3",
     "@react-native-community/async-storage": "github:react-native-community/async-storage",
@@ -32,6 +32,7 @@
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
+    "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-web-browser": "^7.0.0",
@@ -63,12 +64,14 @@
     "react-native-google-autocomplete": "^0.1.7",
     "react-native-maps": "^0.26.1",
     "react-native-modal": "^11.5.3",
+    "react-native-paper": "^3.3.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.0.2",
     "react-native-svg": "9.9.5",
     "react-native-url-preview": "^1.1.4",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
@@ -80,8 +83,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-camera": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
