--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
+    "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-web-browser": "^7.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "geo-distance": "^0.2.0",
     "graphql": "^14.5.8",
     "graphql-scalars": "^1.0.4",
@@ -56,6 +58,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-camera": "^3.13.1",
     "react-native-circular-progress": "^0.2.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.3.0",
@@ -65,6 +68,7 @@
     "react-native-modal": "^11.5.3",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^4.0.2",
+    "react-native-s3-upload": "0.0.12",
     "react-native-svg": "9.9.5",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.13.0",
@@ -79,8 +83,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-camera": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
