--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-camera": "^3.13.1",
     "react-native-circular-progress": "^0.2.0",
     "react-native-flash-message": "^0.1.15",
+    "react-native-geocoding": "^0.4.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-gifted-chat": "^0.12.0-beta-0",
     "react-native-google-autocomplete": "^0.1.7",
@@ -87,7 +88,8 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1"
+    "turf-point": "^2.0.1",
+    "expo-location": "~7.0.0"
   },
   "devDependencies": {
     "axios": "^0.19.0",
