--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
     "expo-av": "~7.0.1",
+    "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-permissions": "~7.0.0",
@@ -46,6 +47,7 @@
     "graphql-tag": "^2.10.1",
     "http": "0.0.0",
     "localtunnel": "^2.0.0",
+    "lodash.floor": "^4.0.4",
     "lodash.round": "^4.0.4",
     "morgan": "^1.9.1",
     "native-base": "^2.13.8",
@@ -84,8 +86,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-camera": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
