--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
     "expo-asset": "^7.0.0",
+    "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
     "expo-web-browser": "^7.0.0",
@@ -80,8 +81,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-camera": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
