--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@turf/turf": "^5.1.6",
     "AsyncStorage": "^0.1.5",
     "apollo-boost": "^0.4.4",
+    "cheerio": "^1.0.0-rc.3",
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "expo": "^35.0.0",
@@ -36,6 +37,7 @@
     "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
+    "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "express": "^4.17.1",
@@ -89,8 +91,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-location": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
