--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "expo-asset": "^7.0.0",
     "expo-av": "~7.0.1",
     "expo-camera": "~7.0.0",
-    "expo-constants": "^7.0.0",
+    "expo-constants": "~7.0.0",
     "expo-font": "^7.0.0",
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
