--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "expo-camera": "~7.0.0",
     "expo-constants": "^7.0.0",
     "expo-font": "^7.0.0",
+    "expo-linear-gradient": "^7.0.1",
+    "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
     "expo-web-browser": "^7.0.0",
     "express": "^4.17.1",
@@ -89,8 +91,7 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.1.1",
     "tcomb-form-native": "^0.6.20",
-    "turf-point": "^2.0.1",
-    "expo-location": "~7.0.0"
+    "turf-point": "^2.0.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
