--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "phondr",
+    "name": "Phondr",
     "slug": "phondr",
     "privacy": "public",
     "sdkVersion": "35.0.0",
@@ -25,6 +25,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "A level styled dating app focused on progression and eliminating pre-conceived bias.",
+    "githubUrl": "https://github.com/Phondr/Phondr"
   }
 }
